--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sweet Secrets Members Club</title>
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Montserrat', sans-serif; }
-    h1, h2, h3 { font-family: 'Playfair Display', serif; }
+    h1, h2, h3 { font-weight: 600; }
+    .card-bg { background-color: #ffffff; }
+    .box-white { background-color: #ffffff; border-color: #e5e7eb; }
+    .text-cream { color: #f5e8c7; }
+    .scroll-gallery { display: flex; overflow-x: auto; padding: 1rem 0; }
+    .scroll-gallery img { margin-right: 1rem; height: 60px; }
   </style>
 </head>
 <body class="bg-black text-white">
   <!-- Hero -->
   <header class="text-center py-16 bg-black">
-    <h1 class="text-7xl font-bold mb-4">Sweet Secrets Members Club</h1>
-    <p class="text-xl text-gray-400">Explore nossa base de membros e conecte-se</p>
+    <h1 class="text-6xl mb-4">Sweet Secrets Members Club</h1>
+    <p class="text-lg text-cream">Explore nossa base de membros e conecte-se</p>
   </header>
-
-  <!-- Content -->
-  <div class="max-w-7xl mx-auto px-6 -mt-10 grid grid-cols-1 lg:grid-cols-4 gap-12">
-    <!-- Members Section -->
-    <section class="lg:col-span-3 space-y-8">
-      <!-- Filters -->
-      <div class="flex flex-wrap gap-4 mb-6">
-        <input id="searchInput" type="text" placeholder="Buscar membro..." class="flex-1 min-w-[200px] px-4 py-2 bg-gray-900 border border-gray-700 rounded-md placeholder-gray-500 focus:outline-none focus:border-white" />
-        <select id="filterIndustry" class="px-4 py-2 bg-gray-900 border border-gray-700 rounded-md focus:outline-none focus:border-white">
+  <div class="max-w-7xl mx-auto px-6 -mt-8 grid grid-cols-1 lg:grid-cols-4 gap-8">
+    <!-- Members -->
+    <section class="lg:col-span-3 space-y-6">
+      <div class="flex flex-wrap gap-4 mb-4">
+        <input id="searchInput" class="flex-1 px-4 py-2 bg-white text-black border rounded-lg" placeholder="Buscar membro..." />
+        <select id="filterIndustry" class="px-4 py-2 bg-white text-black border rounded-lg">
           <option value="">Todas as Indústrias</option>
           <option>Mídia & Entretenimento</option>
           <option>Marketing & Eventos</option>
           <option>Finanças</option>
           <option>Tech</option>
         </select>
-        <select id="filterTitle" class="px-4 py-2 bg-gray-900 border border-gray-700 rounded-md focus:outline-none focus:border-white">
+        <select id="filterTitle" class="px-4 py-2 bg-white text-black border rounded-lg">
           <option value="">Todos os Cargos</option>
           <option>CEO</option>
           <option>Head of Marketing</option>
@@ -41,114 +42,79 @@
           <option>Consultor(a)</option>
         </select>
       </div>
-      <!-- Members Grid -->
-      <div id="membersContainer" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8"></div>
+      <div id="membersContainer" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
     </section>
-
     <!-- Calendar & Events -->
-    <aside class="bg-gray-900 p-6 rounded-xl border border-gray-700">
-      <h2 class="text-3xl font-semibold mb-6 text-center">Agenda</h2>
-      <!-- Month Selector -->
-      <input id="calendarMonth" type="month" class="w-full px-4 py-2 mb-6 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:border-white text-white" />
-      <!-- Calendar Grid -->
-      <div id="calendarGrid" class="grid grid-cols-7 gap-1 mb-6"></div>
-      <!-- Monthly List -->
-      <ul id="eventsList" class="space-y-4 mb-6"></ul>
-      <!-- Details Panel -->
-      <div id="eventDetails" class="hidden bg-black p-4 rounded-lg border border-gray-700">
-        <h3 id="detailName" class="text-2xl font-bold mb-2"></h3>
-        <p id="detailDateTime" class="text-gray-400 mb-1"></p>
-        <p id="detailLocation" class="text-gray-400 mb-4"></p>
-        <p id="detailDesc" class="text-gray-300 mb-6"></p>
-        <button id="detailSignup" class="w-full px-4 py-2 border border-white rounded-md hover:bg-white hover:text-black font-semibold">Pedir Inscrição</button>
-      </div>
+    <aside class="bg-black p-6 rounded-xl border border-gray-800">
+      <h2 class="text-2xl mb-4 text-center">Agenda</h2>
+      <input id="calendarMonth" type="month" class="w-full px-4 py-2 mb-4 bg-white text-black border rounded-lg" />
+      <div id="calendarGrid" class="grid grid-cols-7 gap-2 mb-4 text-center text-sm"></div>
+      <div id="eventsList" class="space-y-3 mb-4"></div>
     </aside>
   </div>
 
-  <!-- Footer -->
+  <!-- Partner Gallery -->
+  <section class="max-w-7xl mx-auto px-6 mt-12">
+    <h2 class="text-xl font-semibold mb-4 text-center text-white">Marcar parceiras do Clube</h2>
+    <div class="scroll-gallery">
+      <!-- logos -->
+      <img src="https://via.placeholder.com/120x60?text=Brand+1" alt="Partner 1" />
+      <img src="https://via.placeholder.com/120x60?text=Brand+2" alt="Partner 2" />
+      <img src="https://via.placeholder.com/120x60?text=Brand+3" alt="Partner 3" />
+      <img src="https://via.placeholder.com/120x60?text=Brand+4" alt="Partner 4" />
+      <img src="https://via.placeholder.com/120x60?text=Brand+5" alt="Partner 5" />
+      <!-- repete se quiser infinito -->
+    </div>
+  </section>
+
   <footer class="text-center py-8 text-gray-500 text-sm">
     © 2025 Sweet Secrets. Todos os direitos reservados.
   </footer>
 
   <script>
-    // Data
     const members = [
-      { id:1,name:'António Silva',photo:'https://via.placeholder.com/150',title:'Head of Latam',company:'Entain Group',industry:'Mídia & Entretenimento',description:'Líder em expansão e estratégia de mercado na América Latina.' },
-      { id:2,name:'Inês Relvas',photo:'https://via.placeholder.com/150',title:'Head de Marketing',company:'Sweet Secrets',industry:'Marketing & Eventos',description:'Especialista em branding de luxo e experiências exclusivas.' }
+      {id:1,name:'António Silva',photo:'https://randomuser.me/api/portraits/men/32.jpg',linkedin:'https://linkedin.com/in/antoniosilva',site:'https://entain.com',title:'Head of Latam',company:'Entain Group',industry:'Mídia & Entretenimento'},
+      {id:2,name:'Inês Relvas',photo:'https://randomuser.me/api/portraits/women/44.jpg',linkedin:'https://linkedin.com/in/inesrelvas',site:'https://sweetsecrets.club',title:'Head de Marketing',company:'Sweet Secrets',industry:'Marketing & Eventos'}
     ];
     const events = [
-      {id:1,name:'Finais NBA com a Hennessy',date:'2025-06-05',time:'19:30',location:'Exímia Bar',slots:'Últimas vagas!',detail:'Viva a final com coquetéis exclusivos Hennessy.'},
-      {id:2,name:'Jantar Dia dos Namorados',date:'2025-06-12',time:'19:30',location:'Sweet Secrets Club',slots:'Vagas limitadas',detail:'Menu romântico com curadoria especial.'},
-      {id:3,name:'Jantar Dia dos Namorados',date:'2025-06-12',time:'21:00',location:'Sweet Secrets Club',slots:'Vagas limitadas',detail:'Menu noturno para uma noite inesquecível.'},
-      {id:4,name:'Petit Comitê CTOs',date:'2025-06-19',time:'19:00',location:'Sala VIP',slots:'Vagas limitadas',detail:'Discussão intimacy tech com líderes.'},
-      {id:5,name:"CEO's Cocktail by Inova.SAO",date:'2025-06-24',time:'20:00',location:'Morumbis',slots:'Vagas limitadas',detail:'Encontro exclusivo de CEOs.'}
+      {id:1,name:'Finais NBA com Hennessy',date:'2025-06-05',time:'19:30',location:'Exímia Bar',slots:'Últimas vagas!',detail:'Coquetéis exclusivos Hennessy.'},
+      {id:2,name:'Jantar Dia dos Namorados',date:'2025-06-12',time:'19:30',location:'Sweet Secrets Club',slots:'Vagas limitadas',detail:'Menu romântico.'},
+      {id:3,name:'Petit Comitê CTOs',date:'2025-06-19',time:'19:00',location:'Sala VIP',slots:'Vagas limitadas',detail:'Discussão tech.'},
+      {id:4,name:"CEO's Cocktail by Inova.SAO",date:'2025-06-24',time:'20:00',location:'Morumbis',slots:'Vagas limitadas',detail:'Encontro de CEOs.'}
     ];
-
-    // Elements
-    const membersContainer = document.getElementById('membersContainer');
-    const searchInput = document.getElementById('searchInput');
-    const filterIndustry = document.getElementById('filterIndustry');
-    const filterTitle = document.getElementById('filterTitle');
-    const calendarMonth = document.getElementById('calendarMonth');
-    const calendarGrid = document.getElementById('calendarGrid');
-    const eventsList = document.getElementById('eventsList');
-    const eventDetails = document.getElementById('eventDetails');
-
-    // Helpers
+    // Elementos
+    const mc = document.getElementById('membersContainer');
+    const si = document.getElementById('searchInput');
+    const fi = document.getElementById('filterIndustry');
+    const ft = document.getElementById('filterTitle');
+    const cm = document.getElementById('calendarMonth');
+    const cg = document.getElementById('calendarGrid');
+    const el = document.getElementById('eventsList');
     const months = ['janeiro','fevereiro','março','abril','maio','junho','julho','agosto','setembro','outubro','novembro','dezembro'];
-    function formatDate(date){ let [y,m,d]=date.split('-');return `${+d} ${months[m-1]} ${y}`; }
-
-    // Render members
-    function renderMembers(list){
-      membersContainer.innerHTML='';
-      list.forEach(m=>{
-        const card=document.createElement('div');
-        card.className='bg-gray-900 p-6 rounded-lg flex flex-col items-center space-y-4 pt-12';
-        card.innerHTML=`
-          <img src="${m.photo}" alt="${m.name}" class="w-28 h-28 rounded-full border-2 border-white"/>
-          <h3 class="text-xl font-semibold">${m.name}</h3>
-          <p class="text-gray-400 text-sm">${m.title} @ ${m.company}</p>
-          <p class="text-gray-500 text-sm italic">${m.industry}</p>
-          <button class="mt-2 px-4 py-2 border border-white rounded-md hover:bg-white hover:text-black text-sm font-medium" onclick="connect('${m.name}')">Conectar</button>
-        `;
-        membersContainer.appendChild(card);
-      });
-    }
-
-    // Connect via WhatsApp
-    function connect(name){ window.open(`https://wa.me/5511913079456?text=${encodeURIComponent('Gostaria de me conectar com o membro '+name)}`,'_blank'); }
-
-    // Calendar
-    function renderCalendar(month){calendarGrid.innerHTML='';let [y,m]=month.split('-').map(Number);let first=new Date(y,m-1,1).getDay();let total=new Date(y,m,0).getDate();for(let i=0;i<first;i++){calendarGrid.appendChild(document.createElement('div'));}for(let d=1;d<=total;d++){let cell=document.createElement('div');let dateStr=`${y}-${String(m).padStart(2,'0')}-${String(d).padStart(2,'0')}`;let has=events.some(e=>e.date===dateStr);cell.textContent=d;cell.className=has?'cursor-pointer text-white font-semibold':'text-gray-600';cell.onclick=()=>showDetail(dateStr);calendarGrid.appendChild(cell);} }
-
-    // Render monthly list
-    function renderList(month){
-      eventsList.innerHTML='';
-      events.filter(e=>e.date.startsWith(month)).forEach(e=>{
-        const box=document.createElement('div');
-        box.className='bg-gray-800 p-4 rounded-md border border-gray-700 mb-4 cursor-pointer hover:border-white';
-        box.innerHTML=`
-          <span class=\"block text-gray-400 text-sm mb-1\">${formatDate(e.date)}</span>
-          <span class=\"block text-white font-bold text-lg mb-1\">${e.name}</span>
-          <span class=\"block text-gray-400 text-sm\">${e.slots}</span>
-        `;
-        box.onclick=()=>showDetail(e.date);
-        eventsList.appendChild(box);
-      });
-    }events.filter(e=>e.date.startsWith(month)).forEach(e=>{let li=document.createElement('li');li.className='cursor-pointer';li.innerHTML=`<span class="font-semibold">${formatDate(e.date)}</span><br><span class="font-bold text-base">${e.name}</span><br><span class="text-gray-400 text-sm">${e.slots}</span>`;li.onclick=()=>showDetail(e.date);eventsList.appendChild(li);});}
-
-    // Show details
-    function showDetail(date){let arr=events.filter(e=>e.date===date);eventDetails.innerHTML='';arr.forEach(e=>{let div=document.createElement('div');div.innerHTML=`<h3 class="text-xl font-bold mb-1">${e.name}</h3><p class="text-gray-400 text-sm mb-1">${formatDate(e.date)} | ${e.time}</p><p class="text-gray-400 text-sm mb-2">${e.location}</p><p class="text-gray-300 text-sm mb-4">${e.detail}</p><button class="w-full px-4 py-2 border border-white rounded-md hover:bg-white hover:text-black font-medium" onclick="signup('${e.name}', '${formatDate(e.date)}')">Inscrever</button>`;eventDetails.appendChild(div);} );eventDetails.classList.remove('hidden');}
-
-    // Signup via WhatsApp
-    function signup(name,date){window.open(`https://wa.me/5511913079456?text=${encodeURIComponent('Gostaria de me inscrever no evento '+name+' do dia '+date)}`,'_blank');}
-
-    // Filter
-    function filterAll(){let term=searchInput.value.toLowerCase(),ind=filterIndustry.value,ti=filterTitle.value;renderMembers(members.filter(m=>m.name.toLowerCase().includes(term)&&(!ind||m.industry===ind)&&(!ti||m.title===ti)));}
-
-    // Init
-    let today=new Date(),cur=today.toISOString().slice(0,7);calendarMonth.value=cur;searchInput.oninput=filterAll;filterIndustry.onchange=filterAll;filterTitle.onchange=filterAll;calendarMonth.onchange=()=>{renderCalendar(calendarMonth.value);renderList(calendarMonth.value);eventDetails.classList.add('hidden');};renderMembers(members);renderCalendar(cur);renderList(cur);
+    function fmt(d){const [y,m,day]=d.split('-');return`${+day} ${months[m-1]} ${y}`;}
+    function renderMembers(list){mc.innerHTML='';list.forEach(m=>{let c=document.createElement('div');c.className='card-bg p-6 rounded-lg text-center space-y-2';c.innerHTML=
+          `<img src="${m.photo}" class="w-28 h-28 rounded-full mx-auto"/>`+
+          `<h3 class="text-lg font-bold text-black">${m.name}</h3>`+
+          `<p class="text-gray-600 text-xs">${m.title} @ ${m.company}</p>`+
+          `<div class="flex justify-center space-x-4 mt-2">`+
+            `<button onclick="ctc('${m.name}')" class="px-3 py-1 bg-black text-white rounded text-xs">Contatar</button>`+
+            `<a href="${m.linkedin}" target="_blank"><button class="px-3 py-1 bg-black text-white rounded text-xs">LinkedIn</button></a>`+
+            `<a href="${m.site}" target="_blank"><button class="px-3 py-1 bg-black text-white rounded text-xs">Site</button></a>`+
+          `</div>`;mc.appendChild(c);});}
+    function ctc(n){window.open(`https://wa.me/5511913079456?text=${encodeURIComponent('Gostaria de me conectar com o membro '+n)}`,'_blank');}
+    function renderCalendar(mon){cg.innerHTML='';let [y,m]=mon.split('-').map(Number),f=new Date(y,m-1,1).getDay(),t=new Date(y,m,0).getDate();for(let i=0;i<f;i++)cg.appendChild(document.createElement('div'));for(let d=1;d<=t;d++){let cell=document.createElement('div'),ds=`${y}-${String(m).padStart(2,'0')}-${String(d).padStart(2,'0')}`,he=events.some(e=>e.date===ds);cell.textContent=d;cell.className=he?'cursor-pointer text-white font-semibold':'text-gray-600';cell.onclick=()=>renderList(mon);cg.appendChild(cell);} }
+    function renderList(mon){el.innerHTML='';events.filter(e=>e.date.startsWith(mon)).forEach(e=>{let b=document.createElement('div');b.className='box-white p-4 rounded-lg border mb-3';b.innerHTML=
+          `<span class="block text-gray-500 text-xs mb-1">${fmt(e.date)}</span>`+
+          `<span class="block text-black font-semibold text-base mb-1">${e.name}</span>`+
+          `<span class="block text-gray-500 text-xs mb-2">${e.slots}</span>`+
+          `<button onclick="signup('${e.name}','${fmt(e.date)}')" class="px-4 py-2 bg-black text-white border rounded text-xs">Inscrever</button>`;el.appendChild(b);});}
+    function signup(n,d){window.open(`https://wa.me/5511913079456?text=${encodeURIComponent('Gostaria de me inscrever no evento '+n+' do dia '+d)}`,'_blank');}
+    function filterAll(){let t=si.value.toLowerCase(),i=fi.value,tt=ft.value;renderMembers(members.filter(m=>m.name.toLowerCase().includes(t)&&(!i||m.industry===i)&&(!tt||m.title===tt)));}
+    const cur=new Date().toISOString().slice(0,7);cm.value=cur;si.oninput=filterAll;fi.onchange=filterAll;ft.onchange=filterAll;cm.onchange=()=>{renderCalendar(cm.value);renderList(cm.value);} ;renderMembers(members);renderCalendar(cur);renderList(cur);
   </script>
 </body>
 </html>
+
+
+
 
